# tech-challenge-p2

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.sh  sample.csv  sample.parquet  tests.ipynb
controllers/: scraping.py
models/: ResposeModels.py
tech_challenge_p2/: app.py
utils/: aws_functions.py  log.py  transform.py
