[tool.poetry]
name = "tech-challenge-p2"
version = "0.1.0"
description = ""
authors = ["Thales Gomes <thalexbr@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.23.1"
fastapi = {extras = ["standard"], version = "^0.112.2"}
chromedriver-py = "^128.0.6613.84"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 179
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev tech_challenge_p2/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=tech_challenge_p2 -vv'
post_test = 'coverage html'
docker = './run.sh'
logs = 'docker logs techchallengep2'
